mapping DDL.sql with All Entity/DTO